--- a/blog.css/components/header.css
+++ b/blog.css/components/header.css
@@ -1,65 +1,46 @@
 body > header {
-    display: grid;
-    grid-template-columns: repeat(6, 160px);
-    column-gap: 15px;
-    row-gap: 15px;
-    align-items: end;
-    margin-inline-start: 2rem;
-    grid-template-areas: "header blank blank aboutme contact";
-  }
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  flex-wrap: wrap;
+  align-items: stretch;
+}
 
-  .about {
-      grid-area: aboutme;
-      grid-column: 4 / 5;
-  }
-  .contact {
-      grid-area: contact;
-      grid-column: 5 / 6;
-  }
-  
-  body > header h1 {
-    font-size: 2rem;
-    flex-wrap: wrap;
-   margin: 0;
-   padding: 0.75rem 0;
-   grid-area: header;
-   grid-column: 1 / 3;
-  }
-  
-  body > header a {
-    display: block;
-    color: rgb(23, 200, 23);
-    font-weight: 700;
-    text-decoration: none;
-    padding: 0.75rem 0;
-  }
+body > header h1 {
+  font-size: 2rem;
+  flex-wrap: wrap;
+  align-self: flex-start;
+  margin-inline-start: 1rem;
+}
+
+body > header > nav {
+  font-size: 1rem;
+  margin-top: 1rem;
+  flex-shrink: 1;
+}
+body > header > nav ul {
+  align-items: center;
+  display: flex;
+  justify-content: space-between;
+  flex-wrap: wrap;
+  list-style: none;
+  margin: 0;
+  padding: 0;
+}
+
+body > header li a {
+  text-decoration: none;
+  text-transform: uppercase;
+  margin-right: 1rem;
+  flex-wrap: wrap;
+  display: block;
+  color: rgb(23, 200, 23);
+  font-weight: 700;
+  text-decoration: none;
+  padding: 0.75rem 0;
+}
   
   body > header a:hover {
     color: black;
     font-weight: 700;
-  }
-  
-  body > header nav {
-    font-size: 1rem;
-  }
-  
-  body > header nav ul {
-    list-style: none;
-    margin: 0;
-    padding: 0;
-    display: grid;
-    grid-template-columns: repeat(5, 145px);
-    column-gap: 15px;
-    row-gap: 15px;
-  }
-  div {
-      counter-increment: item;
-  }
-    
-  div h3 {
-      color: cadetblue;
-  }
-
-  div h3::before {
-      content: counter(item)"-"" ";
   }
